feat: add React Performance and State Management courses with details and technologies

--- a/index.html
+++ b/index.html
@@ -266,6 +266,58 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                React Performance, v2
+                <p class="text-brand">Steve Kinney</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="react">React</li>
+                <li data-tech="performance">Performance</li>
+              </ul>
+
+              <p>
+                Built high-performance React applications by mastering rendering
+                behavior, memoization, and advanced performance strategies.
+                Identified and diagnosed bottlenecks using React DevTools and
+                Profiler, optimized rendering with memoization and component
+                structuring, and applied transitions and deferred values to keep
+                apps responsive. Explored React Fiber internals to understand
+                scheduling and prioritized updates, balanced state to avoid
+                costly re-renders, and leveraged practical performance patterns
+                to build fast, scalable user interfaces.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
+                State Management at Scale in React & Next.js
+                <p class="text-brand">David Khourshid</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="react">React</li>
+                <li data-tech="typescript">TypeScript</li>
+              </ul>
+
+              <p>
+                Learned scalable state management patterns for React and Next.js
+                to build maintainable applications. Explored common state
+                anti-patterns and refactored them using clear, predictable
+                patterns with reducers, finite states, and event-driven logic.
+                Practiced organizing and optimizing complex state, managing form
+                data, syncing with external stores, and improving app clarity
+                and team collaboration. Applied modern techniques for server and
+                URL state, and used flexible tools like useSyncExternalStore and
+                third-party stores to handle evolving project needs
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 TypeScript: From First Steps to Professional
                 <p class="text-brand">Anjana Vakil</p>
               </h3>
