feat: add React & Next.js Learning Path course card with details and technologies

--- a/index.html
+++ b/index.html
@@ -266,6 +266,33 @@
           <div class="grid-auto-fill" data-card="medium">
             <div class="card">
               <h3 class="card__title">
+                React & Next.js Learning Path
+                <p class="text-brand">Frontend Masters</p>
+              </h3>
+
+              <ul class="tag-list" role="list" aria-label="Technologies used">
+                <li data-organization="frontend-masters">Frontend Masters</li>
+                <li data-tech="react">React</li>
+                <li data-tech="next.js">Next.js</li>
+                <li data-tech="typescript">TypeScript</li>
+                <li data-tech="performance">Performance</li>
+              </ul>
+
+              <p>
+                Built a comprehensive foundation in modern React development by
+                completing the official React & Next.js learning path. Learned
+                core React principles, component architecture, hooks, and state
+                management while building real-world UI features. Explored
+                advanced rendering patterns, React Server Components, and
+                performance optimization. Expanded knowledge into full-stack
+                concepts with Next.js, modern tooling, routing, and type safety
+                workflows. Practiced scalable React app design and best
+                practices used in production-level projects.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3 class="card__title">
                 React Performance, v2
                 <p class="text-brand">Steve Kinney</p>
               </h3>
